# advent-of-code

./: .gitignore  .lohr  Cargo.toml  Makefile  README.org  flake.nix
.github/workflows/: rust.yaml
2018/aoc01/: Cargo.toml
2018/aoc01/src/: main.rs
2018/aoc02/: Cargo.toml
2018/aoc02/src/: main.rs
aoc/: Cargo.toml
aoc-get/: aoc-get  default.nix
aoc/src/: lib.rs
aoc2015/: Cargo.toml
aoc2015/aoc2015_bench/: Cargo.toml
aoc2015/aoc2015_bench/benches/: aoc2015_bench.rs
aoc2015/benches/: bench.rs
aoc2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  lib.rs  main.rs
aoc2018/: Cargo.toml
aoc2018/aoc2018_bench/: Cargo.toml
aoc2018/benches/: bench.rs
aoc2018/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  lib.rs  main.rs
aoc2019/: Cargo.toml
aoc2019/aoc2019_bench/: Cargo.toml
aoc2019/aoc2019_bench/benches/: aoc2019_bench.rs
aoc2019/benches/: bench.rs
aoc2019/input/: day11_res.txt
aoc2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  lib.rs  main.rs
aoc2019/src/intcode/: mod.rs  parameter.rs
aoc2020/: Cargo.toml
aoc2020/aoc2020_bench/: Cargo.toml
aoc2020/aoc2020_bench/benches/: aoc2020_bench.rs
aoc2020/benches/: bench.rs
aoc2020/input/: day14_provided2.txt
aoc2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
aoc2021/: Cargo.toml
aoc2021/aoc2021_bench/: Cargo.toml
aoc2021/aoc2021_bench/benches/: aoc2021_bench.rs
aoc2021/src/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day21.rs  lib.rs  main.rs
aoc2022/: Cargo.toml
aoc2022/aoc2022_bench/: Cargo.toml
aoc2022/benches/: aoc2022_bench.rs
aoc2022/src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs
aoc2023/: Cargo.toml
aoc2023/src/: day01.rs  main.rs
aoc2025/: Cargo.toml
aoc2025/benches/: aoc2025_bench.rs
aoc2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  main.rs
