[package]
name = "aoc2018"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
anyhow = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc2018"
path = "src/main.rs"
