[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
anyhow = "1.0"
itertools = "0.9"
nom = "7.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc2020"
path = "src/main.rs"
