[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
anyhow = "1.0"
rand = "0.8"
bitvec = "0.22"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc2021"
path = "src/main.rs"
