[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Antoine Martin <antoine@alarsyo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = [ "rayon" ] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc2022"
path = "src/main.rs"

[[bench]]
name = "aoc2022_bench"
harness = false
