[package]
name = "aoc2025"
version = "0.1.0"
authors = ["Antoine Martin <antoine@alarsyo.net>"]
edition = "2024"

[dependencies]
aoc = { path = "../aoc" }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.8" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aoc2025"
path = "src/main.rs"

[[bench]]
name = "aoc2025_bench"
harness = false
