[package]
name = "aoc2018_bench"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2018 = { path = "../" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2018_bench"
harness = false
