[package]
name = "aoc2021_bench"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2021 = { path = "../" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2021_bench"
harness = false
