[package]
name = "aoc2022_bench"
version = "0.1.0"
authors = ["Antoine Martin <antoine@alarsyo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2022 = { path = "../" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2022_bench"
harness = false
